    - Sort packages to be tested by importance, i.e. descending waiting_count.
    - Use piuparts.conf global proxy setting as http_proxy.
    - Use distros.conf to compute URLs.
    - Load depends-sections for package lookup in partial distros.
  * Rename piuparts-master.py to piuparts-master-backend.py and add a shell
    wrapper script piuparts-master to simplify calling the master from the
    slave. The wrapper reads the section from stdin instead of using a command
    line argument.
  * piuparts-slave.py:
    - Tarball recreation can be disabled by setting max-tgz-age to 0.
    - Relax package existence checks to allow distupgrading to backports.
    - Fix SIGHUP handling while recycling.
    - Flush and unreserve all sections on interrupt.
    - Add support for running piuparts under /usr/bin/timeout.
    - Check system load frequently and enter sleep mode if threshold
      (piuparts.conf global setting slave-load-max) is exceeded. Operation
      will be resumed after load drops below 'slave-load-max - 1.0'. Disabled
      by default.
    - Use piuparts.conf global proxy setting as http_proxy and pass it to
      piuparts via --proxy.
    - Use distros.conf to compute URLs.
    - Use the upgrade-test-distros setting to select between install/purge
      test (if unset) and dist-upgrade test (if there are at least 2 distros).
      Drop support for running both tests for a section.
    - Pass the section to piuparts-master via stdin instead of using a command
      line argument.
  * piuparts-analyze.py:
    - Add support for magic "$DISTRO/None" versions.
  * piuparts-report.py:
    - Call r.dev_off() after generating a plot.  (Closes: #657799)
    - Use piuparts.conf global proxy setting as http_proxy.
    - Use distros.conf to compute URLs.
    - Generate/prepend/append a default description.
    - Load depends-sections for package lookup in partial distros.
  * Makefile:
    - Add DESTDIR support.