@@ -206,10 +206,7 @@ class Slave:
             user = self._master_user + "@"
         else:
             user = ""
-        ssh_cmdline = "cd %s; %s 2> %s.$$ && rm %s.$$" % \
-                      (self._master_directory or ".",
-                      self._master_command, log_file, log_file)
-        p = subprocess.Popen(["ssh", "-x", user + self._master_host, ssh_cmdline],
+        p = subprocess.Popen(["ssh", "-x", user + self._master_host, self._master_command],
                        stdin=subprocess.PIPE, stdout=subprocess.PIPE)
         self._to_master = p.stdin
         self._from_master = p.stdout
